--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-flask==2.3.3
-gunicorn==21.2.0
-openai==0.28.1
-flask-cors==4.0.0
-python-dotenv==1.0.0
-httpx==0.24.1
+
+flask>=2.3.0
+gunicorn>=21.0.0
+openai>=1.3.0  # <-- CRITICAL: Upgrade from 0.28.1 to a modern version
+flask-cors>=4.0.0
+python-dotenv>=1.0.0
+httpx>=0.25.0
